NA SPLETNO STRAN DODANI DELOVNIKI ZA LETO 2015
closes #181

--- a/delavniki.html
+++ b/delavniki.html
@@ -2,10 +2,27 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="sl-si" lang="sl-si" dir="ltr">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<title>Podatki o delavnih dnevih po mesecih za leta 2002 - 2014</title>
+		<title>Podatki o delavnih dnevih po mesecih za leta 2002 - 2015</title>
 	</head>
 	<body>
-		<h1>Podatki o delavnih dnevih po mesecih za leta 2002 - 2014</h1>
+	<h1>Podatki o delavnih dnevih po mesecih za leta 2002 - 2015</h1>
+		<h2>2015</h2>
+		<table>
+			<tr><td>mesec</td><td>delovniki</td><td>prazniki</td><td>skupaj</td><td>št. ur na mesec</td></tr>
+			<tr><td>januar</td><td>21</td><td>1</td><td>22</td><td>176</td></tr>
+			<tr><td>februar</td><td>20</td><td>0</td><td>20</td><td>160</td></tr>
+			<tr><td>marec</td><td>22</td><td>0</td><td>22</td><td>176</td></tr>
+			<tr><td>april</td><td>20</td><td>2</td><td>22</td><td>176</td></tr>
+			<tr><td>maj</td><td>20</td><td>1</td><td>21</td><td>168</td></tr>
+			<tr><td>junij</td><td>21</td><td>1</td><td>22</td><td>176</td></tr>
+			<tr><td>julij</td><td>23</td><td>0</td><td>23</td><td>184</td></tr>
+			<tr><td>avgust</td><td>21</td><td>0</td><td>21</td><td>168</td></tr>
+			<tr><td>september</td><td>22</td><td>0</td><td>22</td><td>176</td></tr>
+			<tr><td>oktober</td><td>22</td><td>0</td><td>22</td><td>176</td></tr>
+			<tr><td>november</td><td>21</td><td>0</td><td>21</td><td>168</td></tr>
+			<tr><td>december</td><td>22</td><td>1</td><td>23</td><td>184</td></tr>
+			<tr><td>skupaj</td><td>255</td><td>6</td><td>261</td><td>2088</td></tr>
+		</table>
 		<h2>2014</h2>
 		<table>
 			<tr><td>mesec</td><td>delovniki</td><td>prazniki</td><td>skupaj</td><td>št. ur na mesec</td></tr>
